--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,29 @@
 @tailwind utilities;
 
 body{
-  background-color: #0bc1c1;
-  min-height: 110vh;
+  /* background-color: #0bc1c1;
+  min-height: 110vh; */
+}
+
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+}
+
+body.blue {
+  background-color: lightblue;
+}
+
+body.green {
+  background-color: lightgreen;
+}
+
+body.orange {
+  background-color: lightcoral;
+}
+
+body.default {
+  background-color: white;
 }
