--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
+  background-color: black;
 }
-
+div.min-h-screen {
+  padding-bottom: env(safe-area-inset-bottom); /* Ensure content does not overlap soft keys */
+}
 body.blue {
   background-color: lightblue;
 }
